@@ -89,6 +89,7 @@
  *   - ~ Use stat instead of relying on readdir to get dt_mode (g_preproc_dm) (8)
  *   - ~ Fix -execv memory leak (9)
  *   - + o_lookup_strictness_tvrage added (gconf) (10)
+ *   - + precheck ignores rule if imdb_skip_zero_score > 0 and score = 0 (10)
  *
  * v2.3:
  *
